# FitnessApp

./: .clang-format  .clangd  .dir-locals.el  .gitignore  CMakeLists.txt  Doxyfile  Excerise.cpp  Exercise.h  Exercise.json  README.md  Session.cpp  main.cpp  main1.cpp  storageAPI.cpp  storageAPI.h
.github/workflows/: cppcheck.yml
packaging/: CMakeLists.txt
packaging/archive/: CMakeLists.txt
packaging/debian/: CMakeLists.txt
reports/: cppcheck_report.txt
scripts/: build  run
software/: CMakeLists.txt
software/src/: CMakeLists.txt  Excerise.cpp  Exercise.cpp  Exercise.h  ExerciseDecreped.h  Rep.cpp  Rep.h  Session.h  Set.cpp  Set.h  Workout.cpp  Workout.h  main.cpp  old_exercise.h  old_rep.h  processes.cpp  processes.h  session.json  set.h  storageAPI.cpp  storageAPI.h  workout.h
software/web/: CMakeLists.txt  package-lock.json  package.json  vite.config.ts
software/web/src/: Api.ts  App.tsx  FitnessTypes.ts  Header.tsx  Pages.ts  Publisher.ts  State.ts
software/web/src/Pages/: Dashboard.tsx
src/: CMakeLists.txt
src/fit-app/: CMakeLists.txt  Session.cpp
src/storage/: CMakeLists.txt  storageAPI.cpp  storageAPI.h
